--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
 
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
+
+<li><strong>2016-01-21 : </strong></strong>LXQt edition 421.160121.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt">release notes</a>)</li>
+<li><strong>2016-01-21 : </strong></strong>BareBones edition 421.160121.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-barebones">release notes</a>)</li>  
+<li><strong>2016-01-21 : </strong></strong>Budgie edition 421.160121.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10">release notes</a>)</li>  
+  
 <li><strong>2016-01-14 : </strong></strong>Gnome edition 421.160114.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-gnome">release notes</a>)</li>
 
 <li><strong>2016-01-14 : </strong></strong>XFCE edition 421.160114.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>  
@@ -196,28 +201,28 @@ figcaption {
     </div>
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/42b290941f628a108843c6f19970780f/GeckoLinux_Budgie10.x86_64-421.160103.0.iso">
+        <a href="https://susestudio.com/download/f6ffd96495d2a70e8e5ed7546a534a30/GeckoLinux_Budgie10.x86_64-421.160121.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11374090/54769a2e-92a2-11e5-8237-9a2dbd91c364.png"></a>
         <figcaption>Download GeckoLinux Budgie edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10/start_testdrive?version=421.160103.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10/start_testdrive?version=421.160121.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/5b268c83044cff5908d975bc2093ed92/GeckoLinux_LXQt.x86_64-421.151222.0.iso">
+        <a href="https://susestudio.com/download/35e10e4740fa5c0106c7e885bb15befb/GeckoLinux_LXQt.x86_64-421.160121.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11956434/2d5f7982-a888-11e5-9d25-5cd86a5028af.png"></a>
         <figcaption>Download GeckoLinux LXQt edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt/start_testdrive?version=421.151222.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt/start_testdrive?version=421.160121.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/d7537c923559946b59a722661df999b8/GeckoLinux_BareBones.x86_64-421.151220.0.iso">
+        <a href="https://susestudio.com/download/92d29424afcba38fb2f45c4654db940a/GeckoLinux_BareBones.x86_64-421.160121.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11405426/99b1f312-9375-11e5-8fe1-f7529eb993ff.jpg"></a>
         <figcaption>Download GeckoLinux BareBones edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones/start_testdrive?version=421.151220.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones/start_testdrive?version=421.160121.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
