--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
 
+<li><strong>2016-02-21 : </strong></strong>Budgie edition 421.160221.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10">release notes</a>)</li>  
+
 <li><strong>2016-01-23 : </strong></strong>Plasma 5 edition 421.160123.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-plasma5">release notes</a>)</li>
 
 <li><strong>2016-01-22 : </strong></strong>Mate edition 421.160122.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-mate">release notes</a>)</li>
@@ -185,10 +187,10 @@ figcaption {
     </div>
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/f6ffd96495d2a70e8e5ed7546a534a30/GeckoLinux_Budgie10.x86_64-421.160121.0.iso">
+        <a href="https://susestudio.com/download/21759705fdb21ab09b64e3188f7a289a/GeckoLinux_Budgie10.x86_64-421.160221.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11374090/54769a2e-92a2-11e5-8237-9a2dbd91c364.png"></a>
         <figcaption>Download GeckoLinux Budgie edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10/start_testdrive?version=421.160121.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10/start_testdrive?version=421.160221.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
