--- a/index.html
+++ b/index.html
@@ -58,27 +58,24 @@
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
 
-<li><strong>2016-02-21 : </strong></strong>Budgie edition 421.160221.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10">release notes</a>)</li>  
+<li><strong>2016-05-10 : </strong></strong>Cinnamon edition 421.160510.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
+<li><strong>2016-05-10 : </strong></strong>Budgie edition 421.160510.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10">release notes</a>)</li>  
+<li><strong>2016-05-10 : </strong></strong>Gnome edition 421.160510.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-gnome">release notes</a>)</li>
+<li><strong>2016-05-10 : </strong></strong>Mate edition 421.160510.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-mate">release notes</a>)</li>
+<li><strong>2016-05-10 : </strong></strong>LXQt edition 421.160510.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt">release notes</a>)</li>
+<li><strong>2016-05-10 : </strong></strong>BareBones edition 421.160510.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-barebones">release notes</a>)</li>
 
 <li><strong>2016-01-23 : </strong></strong>Plasma 5 edition 421.160123.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-plasma5">release notes</a>)</li>
-
 <li><strong>2016-01-22 : </strong></strong>Mate edition 421.160122.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-mate">release notes</a>)</li>
 <li><strong>2016-01-22 : </strong></strong>Gnome edition 421.160122.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-gnome">release notes</a>)</li>
 <li><strong>2016-01-22 : </strong></strong>XFCE edition 421.160122.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>  
 <li><strong>2016-01-22 : </strong></strong>LXQt edition 421.160122.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt">release notes</a>)</li>
-<li><strong>2016-01-22 : </strong></strong>BareBones edition 421.160122.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-barebones">release notes</a>)</li>  
-
-
+<li><strong>2016-01-22 : </strong></strong>BareBones edition 421.160122.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-barebones">release notes</a>)</li>
 <li><strong>2016-01-21 : </strong></strong>Budgie edition 421.160121.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10">release notes</a>)</li>  
-
 <li><strong>2016-01-12 : </strong></strong>Cinnamon edition 421.160112.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
-
 <li><strong>2015-12-22 : </strong></strong>LXQt edition 421.151222.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt">Initial release</a>)</li>
-
 <li><strong>2015-12-20 : </strong></strong>Plasma 5 edition 421.151220.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-plasma5">Initial release</a>)</li>
-
 <li><strong>2015-12-18 : </strong></strong>Mate edition 421.151218.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-mate">Initial release</a>)</li>  
-  
 <li><strong>2015-12-10 : </strong></strong>Gnome edition 421.151210.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-gnome">Initial release</a>)</li>
 
 </ul>
@@ -140,10 +137,10 @@ figcaption {
 <div class="row">
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/3122ee0d193d0174eb6c4f3903a8ba66/GeckoLinux_Cinnamon.x86_64-421.160112.0.iso">
+        <a href="https://susestudio.com/download/55646f98805abc207401668abe2ad1ff/GeckoLinux_Cinnamon.x86_64-421.160510.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg"></a>
         <figcaption>Download GeckoLinux Cinnamon edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/start_testdrive?version=421.160112.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/start_testdrive?version=421.160510.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
@@ -158,10 +155,10 @@ figcaption {
     </div>
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/78f4ab94b230b517bd337c0370ff9932/GeckoLinux_Gnome.x86_64-421.160122.0.iso">
+        <a href="https://susestudio.com/download/ec39cf8f717e809f2fe3b0e26402595a/GeckoLinux_Gnome.x86_64-421.160510.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11734338/69d405e8-9f84-11e5-9559-1b4b0f0d0d8f.png"></a>
         <figcaption>Download GeckoLinux Gnome edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-gnome/start_testdrive?version=421.160122.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-gnome/start_testdrive?version=421.160510.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
@@ -178,37 +175,37 @@ figcaption {
 <div class="row">
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/5f6067691b675691e4bdc920376386bf/GeckoLinux_Mate.x86_64-421.160122.0.iso">
+        <a href="https://susestudio.com/download/4df1fbcef7a09a02fd09d1dffe16c400/GeckoLinux_Mate.x86_64-421.160510.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11911482/ab09c4d8-a5e4-11e5-96a1-5b38a8f928f5.png"></a>
         <figcaption>Download GeckoLinux Mate edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-mate/start_testdrive?version=421.160122.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-mate/start_testdrive?version=421.160510.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/21759705fdb21ab09b64e3188f7a289a/GeckoLinux_Budgie10.x86_64-421.160221.0.iso">
+        <a href="https://susestudio.com/download/65f4f9ee0aa60f85d316034694b0de25/GeckoLinux_Budgie10.x86_64-421.160510.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11374090/54769a2e-92a2-11e5-8237-9a2dbd91c364.png"></a>
         <figcaption>Download GeckoLinux Budgie edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10/start_testdrive?version=421.160221.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10/start_testdrive?version=421.160510.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/a2e8922fbdeca59992ba48c12102e5f6/GeckoLinux_LXQt.x86_64-421.160122.0.iso">
+        <a href="https://susestudio.com/download/877eb0790811bc6f91d131e00a0656e0/GeckoLinux_LXQt.x86_64-421.160510.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11956434/2d5f7982-a888-11e5-9d25-5cd86a5028af.png"></a>
         <figcaption>Download GeckoLinux LXQt edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt/start_testdrive?version=421.160122.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt/start_testdrive?version=421.160510.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/f9d5fa9155eb46c369407c4f80259da2/GeckoLinux_BareBones.x86_64-421.160122.0.iso">
+        <a href="https://susestudio.com/download/1760688a09486684b879e9b4141fc8c5/GeckoLinux_BareBones.x86_64-421.160510.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11405426/99b1f312-9375-11e5-8fe1-f7529eb993ff.jpg"></a>
         <figcaption>Download GeckoLinux BareBones edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones/start_testdrive?version=421.160122.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones/start_testdrive?version=421.160510.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
