--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
 
+<li><strong>2016-05-10 : </strong></strong>XFCE edition 421.160510.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
 <li><strong>2016-05-10 : </strong></strong>Cinnamon edition 421.160510.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
 <li><strong>2016-05-10 : </strong></strong>Budgie edition 421.160510.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10">release notes</a>)</li>  
 <li><strong>2016-05-10 : </strong></strong>Gnome edition 421.160510.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-gnome">release notes</a>)</li>
@@ -146,10 +147,10 @@ figcaption {
     </div>
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/4357c541b3bde4fd20eb3087feff1775/GeckoLinux_XFCE.x86_64-421.160122.0.iso">
+        <a href="https://susestudio.com/download/088f1f2997c765cb44e3ddc6bd02db29/GeckoLinux_XFCE.x86_64-421.160510.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373686/52ad351e-92a1-11e5-88c5-5c124301b8d7.png"></a>
         <figcaption>Download GeckoLinux XFCE edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce/start_testdrive?version=421.160122.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce/start_testdrive?version=421.160510.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
