--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 </ul>
 
 
-<h3><a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h4>
+<h3><a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download GeckoLinux</h4>
 
 <style>
 @media(min-width:30em){.row{width:100%;display:table;table-layout:fixed}.col{display:table-cell}}
