--- a/index.html
+++ b/index.html
@@ -71,10 +71,11 @@
 <h4><a id="geckolinux-features" class="anchor" href="#geckolinux-features" aria-hidden="true"><span class="octicon octicon-link"></span></a>GeckoLinux Features</h4>
 
 <ul>
-<li>An installable live DVD image based on openSUSE Leap 42.1 under 1GB in size</li>
-<li>Individual editions for different popular desktop environments with a pleasant default configuration</li>
+<li>An installable live DVD / USB image based on openSUSE Leap 42.1 under 1GB in size</li>
+<li>Individual editions for many different popular desktop environments with a pleasant default configuration</li>
 <li>Carefully selected open source desktop programs and proprietary media codecs pre-installed and ready to use</li>
 <li>Beautiful open source font rendering configured out of the box</li>
+<li>Optimal power management with TLP pre-installed</li>
 <li>Much more open source and patent encumbered software available in the pre-configured repositories</li>
 </ul>
 
