--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11734281/a84e665c-9f83-11e5-96c3-6941b87e79cf.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11734281/a84e665c-9f83-11e5-96c3-6941b87e79cf.png" title="GeckoLinux Gnome edition" alt="&nbsp;" width="100%"></a></li>
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11404706/58186926-9371-11e5-9cc8-c85cdc5a5692.png"><img src="https://cloud.githubusercontent.com/assets/2692138/12073076/1db4fe52-b0d6-11e5-858d-2d1eb0e6762a.png" title="GeckoLinux Budgie v10 edition" alt="&nbsp;" width="100%"></a></li>
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/12274903/1d126a30-b93b-11e5-9726-a73538ca6567.png"><img src="https://cloud.githubusercontent.com/assets/2692138/12274903/1d126a30-b93b-11e5-9726-a73538ca6567.png" title="GeckoLinux Mate edition" alt="&nbsp;" width="100%"></a></li>
-    <li><a href="https://cloud.githubusercontent.com/assets/2692138/15615205/7b3d37f2-2402-11e6-8ab7-6bf269dcfc6a.png" title="GeckoLinux Plasma 5 edition" alt="&nbsp;" width="100%"></a></li>
+    <li><a href="https://cloud.githubusercontent.com/assets/2692138/15615205/7b3d37f2-2402-11e6-8ab7-6bf269dcfc6a.png"><img src="https://cloud.githubusercontent.com/assets/2692138/15615205/7b3d37f2-2402-11e6-8ab7-6bf269dcfc6a.png" title="GeckoLinux Plasma edition" alt="&nbsp;" width="100%"></a></li>
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11956448/4304f9ec-a888-11e5-9fa0-9339f107129a.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11956448/4304f9ec-a888-11e5-9fa0-9339f107129a.png" title="GeckoLinux LXQt edition" alt="&nbsp;" width="100%"></a></li>
 </ul>
 
