--- a/index.html
+++ b/index.html
@@ -58,13 +58,14 @@
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
 
-<li><strong>2016-05-11 : </strong></strong>XFCE edition 421.160511.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
-<li><strong>2016-05-11 : </strong></strong>Cinnamon edition 421.160511.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
-<li><strong>2016-05-11 : </strong></strong>Budgie edition 421.160511.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10">release notes</a>)</li>  
-<li><strong>2016-05-11 : </strong></strong>Gnome edition 421.160511.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-gnome">release notes</a>)</li>
-<li><strong>2016-05-11 : </strong></strong>Mate edition 421.160511.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-mate">release notes</a>)</li>
-<li><strong>2016-05-11 : </strong></strong>LXQt edition 421.160511.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt">release notes</a>)</li>
-<li><strong>2016-05-11 : </strong></strong>BareBones edition 421.160511.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-barebones">release notes</a>)</li>
+<li><strong>2016-05-27 : </strong></strong>Plasma Stable edition 421.160527.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-stable">release notes</a>)</li>
+<li><strong>2016-05-27 : </strong></strong>XFCE edition 421.160527.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
+<li><strong>2016-05-27 : </strong></strong>Cinnamon edition 421.160527.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
+<li><strong>2016-05-27 : </strong></strong>Budgie edition 421.160527.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10">release notes</a>)</li>  
+<li><strong>2016-05-27 : </strong></strong>Gnome edition 421.160527.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-gnome">release notes</a>)</li>
+<li><strong>2016-05-27 : </strong></strong>Mate edition 421.160527.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-mate">release notes</a>)</li>
+<li><strong>2016-05-27 : </strong></strong>LXQt edition 421.160527.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt">release notes</a>)</li>
+<li><strong>2016-05-27 : </strong></strong>BareBones edition 421.160527.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-barebones">release notes</a>)</li>
 
 </ul>
 
@@ -128,9 +129,9 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg"></a>
         <figcaption>GeckoLinux </br> Cinnamon
-		      </br> <a href="https://susestudio.com/download/05018d30ec3db8af9cbad70d88f59abb/GeckoLinux_Cinnamon.x86_64-421.160511.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://susestudio.com/download/e0e641a273798d745d666bd313861176/GeckoLinux_Cinnamon.x86_64-421.160527.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/start_testdrive?version=421.160511.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/start_testdrive?version=421.160527.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -138,9 +139,9 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373686/52ad351e-92a1-11e5-88c5-5c124301b8d7.png"></a>
         <figcaption>GeckoLinux </br> XFCE
-		      </br> <a href="https://susestudio.com/download/3d00a9a6635c3c9390646493e6e23681/GeckoLinux_XFCE.x86_64-421.160511.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://susestudio.com/download/474764fe990d9124e4f5d1940b99959d/GeckoLinux_XFCE.x86_64-421.160527.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 		      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce/start_testdrive?version=421.160511.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce/start_testdrive?version=421.160527.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -148,19 +149,19 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11734338/69d405e8-9f84-11e5-9559-1b4b0f0d0d8f.png"></a>
         <figcaption>GeckoLinux </br> Gnome
-		      </br> <a href="https://susestudio.com/download/b3275a72d2ba810c2ca1d51b5689d03e/GeckoLinux_Gnome.x86_64-421.160511.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://susestudio.com/download/44e71dd1a66d73ddb81cd31e016676a3/GeckoLinux_Gnome.x86_64-421.160527.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 		      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-gnome#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-gnome/start_testdrive?version=421.160511.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-gnome/start_testdrive?version=421.160527.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
    <div class="col">
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
-        <figcaption>GeckoLinux </br> Plasma 5
-		      </br> <a href="https://susestudio.com/download/d476026fd66fd2b0dd201599f8a8eaf1/GeckoLinux_Plasma5.x86_64-421.160123.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+        <figcaption>GeckoLinux </br> Plasma Stable
+		      </br> <a href="https://susestudio.com/download/270570e98e4e8ed696c214688022cc5d/GeckoLinux_Plasma_Stable.x86_64-421.160527.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 		      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma5#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma5/start_testdrive?version=421.160123.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-stable/start_testdrive?version=421.160527.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -170,9 +171,9 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11911482/ab09c4d8-a5e4-11e5-96a1-5b38a8f928f5.png"></a>
         <figcaption>GeckoLinux </br> Mate
-		      </br> <a href="https://susestudio.com/download/40b388fe7562967fb9c86467b8ad5dd8/GeckoLinux_Mate.x86_64-421.160511.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://susestudio.com/download/2aede98b81f880d6d9178f1ba4ce4a91/GeckoLinux_Mate.x86_64-421.160527.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 		      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-mate#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-mate/start_testdrive?version=421.160511.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-mate/start_testdrive?version=421.160527.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -180,9 +181,9 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11374090/54769a2e-92a2-11e5-8237-9a2dbd91c364.png"></a>
         <figcaption>GeckoLinux </br> Budgie
-		      </br> <a href="https://susestudio.com/download/6b31fa58d13b8c18f1606e6afaef9e15/GeckoLinux_Budgie10.x86_64-421.160511.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://susestudio.com/download/408b8b3c7015606ae1c935489c6825bd/GeckoLinux_Budgie10.x86_64-421.160527.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 		      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10/start_testdrive?version=421.160511.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10/start_testdrive?version=421.160527.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -190,9 +191,9 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11956434/2d5f7982-a888-11e5-9d25-5cd86a5028af.png"></a>
         <figcaption>GeckoLinux </br> LXQt
-		      </br> <a href="https://susestudio.com/download/4321ac401dee43fd7d69845af18b7544/GeckoLinux_LXQt.x86_64-421.160511.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://susestudio.com/download/560909a8ef6339b1fe4c7e38b5986a88/GeckoLinux_LXQt.x86_64-421.160527.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 		      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt/start_testdrive?version=421.160511.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt/start_testdrive?version=421.160527.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -200,9 +201,9 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11405426/99b1f312-9375-11e5-8fe1-f7529eb993ff.jpg"></a>
         <figcaption>GeckoLinux </br> "Barebones"
-		      </br> <a href="https://susestudio.com/download/61bd9a702694ad713c8b2794c512d1f5/GeckoLinux_BareBones.x86_64-421.160511.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://susestudio.com/download/70b57f278b253f5964e9ce72f76414a2/GeckoLinux_BareBones.x86_64-421.160527.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 		      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones/start_testdrive?version=421.160511.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones/start_testdrive?version=421.160527.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
