--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <a href="https://github.com/geckolinux/geckolinux-project/wiki" class="btn">Documentation</a>
       <a href="https://github.com/geckolinux/geckolinux-project/issues" class="btn">Bugs</a>
       <a href="https://groups.google.com/d/forum/geckolinux" class="btn">Forum</a>
+      <a href="https://groups.google.com/d/forum/geckolinux-updates" class="btn">News</a>
     </section>
 
 <section class="main-content">
