--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
 
+<li><strong>2016-05-27 : </strong></strong>Plasma Stable edition 421.160601.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-stable">release notes</a>)</li>
 <li><strong>2016-05-27 : </strong></strong>Plasma Stable edition 421.160527.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-stable">release notes</a>)</li>
 <li><strong>2016-05-27 : </strong></strong>XFCE edition 421.160527.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
 <li><strong>2016-05-27 : </strong></strong>Cinnamon edition 421.160527.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
@@ -160,9 +161,9 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
         <figcaption>GeckoLinux </br> Plasma Stable
-		      </br> <a href="https://susestudio.com/download/270570e98e4e8ed696c214688022cc5d/GeckoLinux_Plasma_Stable.x86_64-421.160527.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://susestudio.com/download/d9c0e5a5e632a33705aed433b661def8/GeckoLinux_Plasma_Stable.x86_64-421.160601.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 		      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-stable#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-stable/start_testdrive?version=421.160527.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-stable/start_testdrive?version=421.160601.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
