--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <h4><a id="geckolinux-features" class="anchor" href="#geckolinux-features" aria-hidden="true"><span class="octicon octicon-link"></span></a>GeckoLinux Features</h4>
 
 <ul>
-<li>An installable live DVD / USB image based on openSUSE Leap 42.1 under 1GB in size</li>
+<li>An installable live DVD / USB image based on openSUSE around 1GB in size</li>
 <li>Individual editions for many different popular desktop environments with a pleasant default configuration</li>
 <li>Carefully selected open source desktop programs and proprietary media codecs pre-installed and ready to use</li>
 <li>Beautiful open source font rendering configured out of the box</li>
@@ -112,6 +112,8 @@
 
 
 <h3><a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download GeckoLinux</h4>
+
+<h4><strong>Notice:</strong>The live system password is <pre>linux</pre> for normal and root users.</h4>
 
 <style>
 @media(min-width:30em){.row{width:100%;display:table;table-layout:fixed}.col{display:table-cell}}
