--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 <h3><a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download GeckoLinux</h4>
 
-<h4><strong>Notice:</strong>The live system password is <pre>linux</pre> for normal and root users.</h4>
+<h5><strong>Notice:</strong>The live system password is <code>linux</code> for normal and root users.</h4>
 
 <style>
 @media(min-width:30em){.row{width:100%;display:table;table-layout:fixed}.col{display:table-cell}}
