--- a/index.html
+++ b/index.html
@@ -111,9 +111,12 @@
 </ul>
 
 
-<h3><a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download GeckoLinux <em>Static</em> editions</h4>
+<h3><a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h3>
 
-<h4>GeckoLinux <em>Static</em> editions are based on openSUSE Leap 42.1</h4>
+<h4><a id="download-static" class="anchor" href="#download-static"</a>GeckoLinux <em>Static</em> editions:</h4>
+<p>GeckoLinux <em>Static</em> editions are based on openSUSE Leap 42.1 with its periodic release cycle and a long support lifecycle. 
+<a href="#download-rolling">Looking for the rolling release?</a>
+</p>
 
 <h5><strong>Notice: </strong>The live system password is <code>linux</code> for normal and root users.</h4>
 
@@ -214,6 +217,12 @@ figcaption {
       </figure>
     </div>
 </div>
+
+<h4><a id="download-rolling" class="anchor" href="#download-rolling"</a>GeckoLinux <em>Rolling</em> editions:</h4>
+<p>GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its frequent and extremely well tested stable rolling releases. 
+<a href="#download-static">Looking for the static release?</a>
+</p>
+
 
 <h3><a id="who" class="anchor" href="#who" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who Are You?</h3>
 
