--- a/index.html
+++ b/index.html
@@ -113,8 +113,9 @@
 
 <h3><a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h3>
 
-<h4><a id="download-static" class="anchor" href="#download-static"</a>GeckoLinux <em>Static</em> editions:</h4>
-<p>GeckoLinux <em>Static</em> editions are based on openSUSE Leap 42.1 with its periodic release cycle and a long support lifecycle. 
+<h4><a id="download-static" class="anchor" href="#download-static" aria-hidden="true"</a>GeckoLinux <em>Static</em> editions:</h4>
+<p>
+GeckoLinux <em>Static</em> editions are based on openSUSE Leap 42.1 with its periodic release cycle and a long support lifecycle. 
 <a href="#download-rolling">Looking for the rolling release?</a>
 </p>
 
