--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 <h4><a id="download-static" class="anchor" href="#download-static" aria-hidden="true"></a></a>GeckoLinux <em>Static</em> editions:</h4>
 <p>
-GeckoLinux <em>Static</em> editions are based on openSUSE Leap 42.1 with its periodic release cycle and a long support lifecycle. 
+GeckoLinux <em>Static</em> editions are based on openSUSE Leap 42.1 with its periodic release cycle and a long support lifetime. 
 <a href="#download-rolling">Looking for the rolling release?</a>
 </p>
 
@@ -219,8 +219,9 @@ figcaption {
     </div>
 </div>
 
-<h4><a id="download-rolling" class="anchor" href="#download-rolling"</a>GeckoLinux <em>Rolling</em> editions:</h4>
-<p>GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its frequent and extremely well tested stable rolling releases. 
+<h4><a id="download-rolling" class="anchor" href="#download-rolling" aria-hidden="true"></a></a>GeckoLinux <em>Rolling</em> editions:</h4>
+<p>
+GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its frequent and extremely well tested stable rolling releases. 
 <a href="#download-static">Looking for the static release?</a>
 </p>
 
