--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ figcaption {
     <div class="col">
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg"></a>
-        <figcaption>GeckoLinux </br> Cinnamon
+        <figcaption>GeckoLinux Static </br> Cinnamon
 		      </br> <a href="https://susestudio.com/download/e0e641a273798d745d666bd313861176/GeckoLinux_Cinnamon.x86_64-421.160527.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
 	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/start_testdrive?version=421.160527.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
