--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ figcaption {
 GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its frequent and extremely well tested stable rolling releases. 
 <a href="#download-static">Looking for the static release?</a>
 </p>
-<p><em>Coming soon!</em></p>
+<p><strong><em>Coming soon!</em></strong></p>
 
 
 <h3><a id="who" class="anchor" href="#who" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who Are You?</h3>
