--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ figcaption {
     <div class="col">
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373686/52ad351e-92a1-11e5-88c5-5c124301b8d7.png"></a>
-        <figcaption>GeckoLinux </br> XFCE
+        <figcaption>GeckoLinux Static </br> XFCE
 		      </br> <a href="https://susestudio.com/download/474764fe990d9124e4f5d1940b99959d/GeckoLinux_XFCE.x86_64-421.160527.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 		      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
 	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce/start_testdrive?version=421.160527.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
@@ -158,7 +158,7 @@ figcaption {
     <div class="col">
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11734338/69d405e8-9f84-11e5-9559-1b4b0f0d0d8f.png"></a>
-        <figcaption>GeckoLinux </br> Gnome
+        <figcaption>GeckoLinux Static </br> Gnome
 		      </br> <a href="https://susestudio.com/download/44e71dd1a66d73ddb81cd31e016676a3/GeckoLinux_Gnome.x86_64-421.160527.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 		      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-gnome#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
 	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-gnome/start_testdrive?version=421.160527.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
@@ -168,7 +168,7 @@ figcaption {
    <div class="col">
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
-        <figcaption>GeckoLinux </br> Plasma Stable
+        <figcaption>GeckoLinux Static </br> Plasma Stable
 		      </br> <a href="https://susestudio.com/download/d9c0e5a5e632a33705aed433b661def8/GeckoLinux_Plasma_Stable.x86_64-421.160601.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 		      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-stable#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
 	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-stable/start_testdrive?version=421.160601.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
@@ -180,7 +180,7 @@ figcaption {
     <div class="col">
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11911482/ab09c4d8-a5e4-11e5-96a1-5b38a8f928f5.png"></a>
-        <figcaption>GeckoLinux </br> Mate
+        <figcaption>GeckoLinux Static </br> Mate
 		      </br> <a href="https://susestudio.com/download/2aede98b81f880d6d9178f1ba4ce4a91/GeckoLinux_Mate.x86_64-421.160527.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 		      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-mate#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
 	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-mate/start_testdrive?version=421.160527.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
@@ -190,7 +190,7 @@ figcaption {
     <div class="col">
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11374090/54769a2e-92a2-11e5-8237-9a2dbd91c364.png"></a>
-        <figcaption>GeckoLinux </br> Budgie
+        <figcaption>GeckoLinux Static </br> Budgie
 		      </br> <a href="https://susestudio.com/download/408b8b3c7015606ae1c935489c6825bd/GeckoLinux_Budgie10.x86_64-421.160527.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 		      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
 	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10/start_testdrive?version=421.160527.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
@@ -200,7 +200,7 @@ figcaption {
     <div class="col">
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11956434/2d5f7982-a888-11e5-9d25-5cd86a5028af.png"></a>
-        <figcaption>GeckoLinux </br> LXQt
+        <figcaption>GeckoLinux Static </br> LXQt
 		      </br> <a href="https://susestudio.com/download/560909a8ef6339b1fe4c7e38b5986a88/GeckoLinux_LXQt.x86_64-421.160527.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 		      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
 	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt/start_testdrive?version=421.160527.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
@@ -210,7 +210,7 @@ figcaption {
     <div class="col">
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11405426/99b1f312-9375-11e5-8fe1-f7529eb993ff.jpg"></a>
-        <figcaption>GeckoLinux </br> "Barebones"
+        <figcaption>GeckoLinux Static </br> "Barebones"
 		      </br> <a href="https://susestudio.com/download/70b57f278b253f5964e9ce72f76414a2/GeckoLinux_BareBones.x86_64-421.160527.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 		      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
 	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones/start_testdrive?version=421.160527.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
