--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
 
+<li><strong>2016-05-27 : </strong></strong>XFCE edition 421.160605.0 (<a href="https://groups.google.com/forum/#!msg/geckolinux-updates/-sNd0eomHH0/TXX7RykABQAJ">release notes</a>)</li>
 <li><strong>2016-05-27 : </strong></strong>Plasma Stable edition 421.160601.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-stable">release notes</a>)</li>
 <li><strong>2016-05-27 : </strong></strong>Plasma Stable edition 421.160527.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-stable">release notes</a>)</li>
 <li><strong>2016-05-27 : </strong></strong>XFCE edition 421.160527.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
@@ -149,9 +150,9 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373686/52ad351e-92a1-11e5-88c5-5c124301b8d7.png"></a>
         <figcaption>GeckoLinux Static </br> XFCE
-		      </br> <a href="https://susestudio.com/download/474764fe990d9124e4f5d1940b99959d/GeckoLinux_XFCE.x86_64-421.160527.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://susestudio.com/download/df287e538a90e95dbba5aa8fb822d99c/GeckoLinux_XFCE.x86_64-421.160605.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 		      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce/start_testdrive?version=421.160527.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce/start_testdrive?version=421.160605.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
