--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <h3><a id="welcome-to-geckolinux" class="anchor" href="#welcome-to-geckolinux" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GeckoLinux</h3>
 
-<p>GeckoLinux is a Linux spin based on the openSUSE distribution, with a focus on polish and out-of-the-box usability on the desktop.</p>
+<p>GeckoLinux is a Linux spin based on the openSUSE distribution, with a focus on polish and out-of-the-box usability on the desktop. It is available in <em>Static</em> (based on openSUSE Leap) and <em>Rolling</em> (based on openSUSE Tumbleweed) editions.</p>
 
 <ul class="slideshow">
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11381655/3dfa5bc2-92cb-11e5-8dd8-d3a14144a5f1.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11381655/3dfa5bc2-92cb-11e5-8dd8-d3a14144a5f1.png" title="GeckoLinux Cinnamon edition" alt="&nbsp;" width="100%"></a></li>
